--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
     "react": "^16.13.1",
