--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.19",
+    "mongodb": "^3.6.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
