--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.js",
-    "seed": "node server/seed.js"
+    "seed": "node server/seed.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -28,6 +29,7 @@
     "babel-loader": "^8.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "faker": "^4.1.0",
+    "jest": "^26.3.0",
     "lodash": "^4.17.19",
     "mongodb": "^3.6.0",
     "webpack": "^4.44.1",
