--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.js",
     "seed": "node server/seed.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.19.2",
