--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "flexbox": "0.0.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
